flex_bison/grammar.output
Terminals unused in grammar

    token_type


Grammar

    0 $accept: program $end

    1 program: BLOCK

    2 BLOCK: statement_list

    3 statement_list: statement
    4               | statement_list statement

    5 statement: ASSIGNMENT
    6          | PRINT
    7          | FUNCTION_DEF
    8          | FUNCTION_CALL
    9          | IF
   10          | LOOP
   11          | NEWLINE

   12 ASSIGNMENT: STA_id IDENTIFIER COMMA expression

   13 PRINT: LOG_id expression

   14 FUNCTION_DEF: FUNC_id FUNCTION_ID NEWLINE BLOCK END_id

   15 FUNCTION_CALL: JMP_id FUNCTION_ID

   16 FUNCTION_ID: IDENTIFIER COMMA par_list
   17            | IDENTIFIER

   18 par_list: IDENTIFIER
   19         | par_list COMMA IDENTIFIER

   20 IF: CEQ_id rel_expression NEWLINE BLOCK ELSE END_id
   21   | CEQ_id rel_expression NEWLINE BLOCK END_id

   22 ELSE: ELSE_id NEWLINE BLOCK

   23 LOOP: WHL_id rel_expression NEWLINE BLOCK END_id

   24 rel_expression: expression
   25               | expression EQ_id expression
   26               | expression LT_id expression
   27               | expression GT_id expression

   28 expression: term
   29           | expression PLUS term
   30           | expression MINUS term
   31           | expression OR term

   32 term: factor
   33     | term TIMES factor
   34     | term DIVIDE factor
   35     | term AND factor

   36 factor: PLUS factor
   37       | MINUS factor
   38       | NOT factor
   39       | NUMBER
   40       | LPAREN expression RPAREN
   41       | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STA_id (258) 12
    LOG_id (259) 13
    FUNC_id (260) 14
    JMP_id (261) 15
    CEQ_id (262) 20 21
    WHL_id (263) 23
    END_id (264) 14 20 21 23
    EQ_id (265) 25
    LT_id (266) 26
    GT_id (267) 27
    ELSE_id (268) 22
    COMMA (269) 12 16 19
    AND (270) 35
    OR (271) 31
    NOT (272) 38
    PLUS (273) 29 36
    MINUS (274) 30 37
    TIMES (275) 33
    DIVIDE (276) 34
    LPAREN (277) 40
    RPAREN (278) 40
    NEWLINE (279) 11 14 20 21 22 23
    token_type (280)
    NUMBER (281) 39
    IDENTIFIER (282) 12 16 17 18 19 41


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 1
        on right: 0
    BLOCK (30)
        on left: 2
        on right: 1 14 20 21 22 23
    statement_list (31)
        on left: 3 4
        on right: 2 4
    statement (32)
        on left: 5 6 7 8 9 10 11
        on right: 3 4
    ASSIGNMENT (33)
        on left: 12
        on right: 5
    PRINT (34)
        on left: 13
        on right: 6
    FUNCTION_DEF (35)
        on left: 14
        on right: 7
    FUNCTION_CALL (36)
        on left: 15
        on right: 8
    FUNCTION_ID (37)
        on left: 16 17
        on right: 14 15
    par_list (38)
        on left: 18 19
        on right: 16 19
    IF (39)
        on left: 20 21
        on right: 9
    ELSE (40)
        on left: 22
        on right: 20
    LOOP (41)
        on left: 23
        on right: 10
    rel_expression (42)
        on left: 24 25 26 27
        on right: 20 21 23
    expression (43)
        on left: 28 29 30 31
        on right: 12 13 24 25 26 27 29 30 31 40
    term (44)
        on left: 32 33 34 35
        on right: 28 29 30 31 33 34 35
    factor (45)
        on left: 36 37 38 39 40 41
        on right: 32 33 34 35 36 37 38


State 0

    0 $accept: • program $end

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    program         go to state 8
    BLOCK           go to state 9
    statement_list  go to state 10
    statement       go to state 11
    ASSIGNMENT      go to state 12
    PRINT           go to state 13
    FUNCTION_DEF    go to state 14
    FUNCTION_CALL   go to state 15
    IF              go to state 16
    LOOP            go to state 17


State 1

   12 ASSIGNMENT: STA_id • IDENTIFIER COMMA expression

    IDENTIFIER  shift, and go to state 18


State 2

   13 PRINT: LOG_id • expression

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 25
    term        go to state 26
    factor      go to state 27


State 3

   14 FUNCTION_DEF: FUNC_id • FUNCTION_ID NEWLINE BLOCK END_id

    IDENTIFIER  shift, and go to state 28

    FUNCTION_ID  go to state 29


State 4

   15 FUNCTION_CALL: JMP_id • FUNCTION_ID

    IDENTIFIER  shift, and go to state 28

    FUNCTION_ID  go to state 30


State 5

   20 IF: CEQ_id • rel_expression NEWLINE BLOCK ELSE END_id
   21   | CEQ_id • rel_expression NEWLINE BLOCK END_id

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    rel_expression  go to state 31
    expression      go to state 32
    term            go to state 26
    factor          go to state 27


State 6

   23 LOOP: WHL_id • rel_expression NEWLINE BLOCK END_id

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    rel_expression  go to state 33
    expression      go to state 32
    term            go to state 26
    factor          go to state 27


State 7

   11 statement: NEWLINE •

    $default  reduce using rule 11 (statement)


State 8

    0 $accept: program • $end

    $end  shift, and go to state 34


State 9

    1 program: BLOCK •

    $default  reduce using rule 1 (program)


State 10

    2 BLOCK: statement_list •
    4 statement_list: statement_list • statement

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    $default  reduce using rule 2 (BLOCK)

    statement      go to state 35
    ASSIGNMENT     go to state 12
    PRINT          go to state 13
    FUNCTION_DEF   go to state 14
    FUNCTION_CALL  go to state 15
    IF             go to state 16
    LOOP           go to state 17


State 11

    3 statement_list: statement •

    $default  reduce using rule 3 (statement_list)


State 12

    5 statement: ASSIGNMENT •

    $default  reduce using rule 5 (statement)


State 13

    6 statement: PRINT •

    $default  reduce using rule 6 (statement)


State 14

    7 statement: FUNCTION_DEF •

    $default  reduce using rule 7 (statement)


State 15

    8 statement: FUNCTION_CALL •

    $default  reduce using rule 8 (statement)


State 16

    9 statement: IF •

    $default  reduce using rule 9 (statement)


State 17

   10 statement: LOOP •

    $default  reduce using rule 10 (statement)


State 18

   12 ASSIGNMENT: STA_id IDENTIFIER • COMMA expression

    COMMA  shift, and go to state 36


State 19

   38 factor: NOT • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 37


State 20

   36 factor: PLUS • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 38


State 21

   37 factor: MINUS • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 39


State 22

   40 factor: LPAREN • expression RPAREN

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 40
    term        go to state 26
    factor      go to state 27


State 23

   39 factor: NUMBER •

    $default  reduce using rule 39 (factor)


State 24

   41 factor: IDENTIFIER •

    $default  reduce using rule 41 (factor)


State 25

   13 PRINT: LOG_id expression •
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 13 (PRINT)


State 26

   28 expression: term •
   33 term: term • TIMES factor
   34     | term • DIVIDE factor
   35     | term • AND factor

    AND     shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46

    $default  reduce using rule 28 (expression)


State 27

   32 term: factor •

    $default  reduce using rule 32 (term)


State 28

   16 FUNCTION_ID: IDENTIFIER • COMMA par_list
   17            | IDENTIFIER •

    COMMA  shift, and go to state 47

    $default  reduce using rule 17 (FUNCTION_ID)


State 29

   14 FUNCTION_DEF: FUNC_id FUNCTION_ID • NEWLINE BLOCK END_id

    NEWLINE  shift, and go to state 48


State 30

   15 FUNCTION_CALL: JMP_id FUNCTION_ID •

    $default  reduce using rule 15 (FUNCTION_CALL)


State 31

   20 IF: CEQ_id rel_expression • NEWLINE BLOCK ELSE END_id
   21   | CEQ_id rel_expression • NEWLINE BLOCK END_id

    NEWLINE  shift, and go to state 49


State 32

   24 rel_expression: expression •
   25               | expression • EQ_id expression
   26               | expression • LT_id expression
   27               | expression • GT_id expression
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    EQ_id  shift, and go to state 50
    LT_id  shift, and go to state 51
    GT_id  shift, and go to state 52
    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 24 (rel_expression)


State 33

   23 LOOP: WHL_id rel_expression • NEWLINE BLOCK END_id

    NEWLINE  shift, and go to state 53


State 34

    0 $accept: program $end •

    $default  accept


State 35

    4 statement_list: statement_list statement •

    $default  reduce using rule 4 (statement_list)


State 36

   12 ASSIGNMENT: STA_id IDENTIFIER COMMA • expression

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 54
    term        go to state 26
    factor      go to state 27


State 37

   38 factor: NOT factor •

    $default  reduce using rule 38 (factor)


State 38

   36 factor: PLUS factor •

    $default  reduce using rule 36 (factor)


State 39

   37 factor: MINUS factor •

    $default  reduce using rule 37 (factor)


State 40

   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term
   40 factor: LPAREN expression • RPAREN

    OR      shift, and go to state 41
    PLUS    shift, and go to state 42
    MINUS   shift, and go to state 43
    RPAREN  shift, and go to state 55


State 41

   31 expression: expression OR • term

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    term    go to state 56
    factor  go to state 27


State 42

   29 expression: expression PLUS • term

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    term    go to state 57
    factor  go to state 27


State 43

   30 expression: expression MINUS • term

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    term    go to state 58
    factor  go to state 27


State 44

   35 term: term AND • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 59


State 45

   33 term: term TIMES • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 60


State 46

   34 term: term DIVIDE • factor

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    factor  go to state 61


State 47

   16 FUNCTION_ID: IDENTIFIER COMMA • par_list

    IDENTIFIER  shift, and go to state 62

    par_list  go to state 63


State 48

   14 FUNCTION_DEF: FUNC_id FUNCTION_ID NEWLINE • BLOCK END_id

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    BLOCK           go to state 64
    statement_list  go to state 10
    statement       go to state 11
    ASSIGNMENT      go to state 12
    PRINT           go to state 13
    FUNCTION_DEF    go to state 14
    FUNCTION_CALL   go to state 15
    IF              go to state 16
    LOOP            go to state 17


State 49

   20 IF: CEQ_id rel_expression NEWLINE • BLOCK ELSE END_id
   21   | CEQ_id rel_expression NEWLINE • BLOCK END_id

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    BLOCK           go to state 65
    statement_list  go to state 10
    statement       go to state 11
    ASSIGNMENT      go to state 12
    PRINT           go to state 13
    FUNCTION_DEF    go to state 14
    FUNCTION_CALL   go to state 15
    IF              go to state 16
    LOOP            go to state 17


State 50

   25 rel_expression: expression EQ_id • expression

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 66
    term        go to state 26
    factor      go to state 27


State 51

   26 rel_expression: expression LT_id • expression

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 67
    term        go to state 26
    factor      go to state 27


State 52

   27 rel_expression: expression GT_id • expression

    NOT         shift, and go to state 19
    PLUS        shift, and go to state 20
    MINUS       shift, and go to state 21
    LPAREN      shift, and go to state 22
    NUMBER      shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    expression  go to state 68
    term        go to state 26
    factor      go to state 27


State 53

   23 LOOP: WHL_id rel_expression NEWLINE • BLOCK END_id

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    BLOCK           go to state 69
    statement_list  go to state 10
    statement       go to state 11
    ASSIGNMENT      go to state 12
    PRINT           go to state 13
    FUNCTION_DEF    go to state 14
    FUNCTION_CALL   go to state 15
    IF              go to state 16
    LOOP            go to state 17


State 54

   12 ASSIGNMENT: STA_id IDENTIFIER COMMA expression •
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 12 (ASSIGNMENT)


State 55

   40 factor: LPAREN expression RPAREN •

    $default  reduce using rule 40 (factor)


State 56

   31 expression: expression OR term •
   33 term: term • TIMES factor
   34     | term • DIVIDE factor
   35     | term • AND factor

    AND     shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46

    $default  reduce using rule 31 (expression)


State 57

   29 expression: expression PLUS term •
   33 term: term • TIMES factor
   34     | term • DIVIDE factor
   35     | term • AND factor

    AND     shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46

    $default  reduce using rule 29 (expression)


State 58

   30 expression: expression MINUS term •
   33 term: term • TIMES factor
   34     | term • DIVIDE factor
   35     | term • AND factor

    AND     shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46

    $default  reduce using rule 30 (expression)


State 59

   35 term: term AND factor •

    $default  reduce using rule 35 (term)


State 60

   33 term: term TIMES factor •

    $default  reduce using rule 33 (term)


State 61

   34 term: term DIVIDE factor •

    $default  reduce using rule 34 (term)


State 62

   18 par_list: IDENTIFIER •

    $default  reduce using rule 18 (par_list)


State 63

   16 FUNCTION_ID: IDENTIFIER COMMA par_list •
   19 par_list: par_list • COMMA IDENTIFIER

    COMMA  shift, and go to state 70

    $default  reduce using rule 16 (FUNCTION_ID)


State 64

   14 FUNCTION_DEF: FUNC_id FUNCTION_ID NEWLINE BLOCK • END_id

    END_id  shift, and go to state 71


State 65

   20 IF: CEQ_id rel_expression NEWLINE BLOCK • ELSE END_id
   21   | CEQ_id rel_expression NEWLINE BLOCK • END_id

    END_id   shift, and go to state 72
    ELSE_id  shift, and go to state 73

    ELSE  go to state 74


State 66

   25 rel_expression: expression EQ_id expression •
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 25 (rel_expression)


State 67

   26 rel_expression: expression LT_id expression •
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 26 (rel_expression)


State 68

   27 rel_expression: expression GT_id expression •
   29 expression: expression • PLUS term
   30           | expression • MINUS term
   31           | expression • OR term

    OR     shift, and go to state 41
    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43

    $default  reduce using rule 27 (rel_expression)


State 69

   23 LOOP: WHL_id rel_expression NEWLINE BLOCK • END_id

    END_id  shift, and go to state 75


State 70

   19 par_list: par_list COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 76


State 71

   14 FUNCTION_DEF: FUNC_id FUNCTION_ID NEWLINE BLOCK END_id •

    $default  reduce using rule 14 (FUNCTION_DEF)


State 72

   21 IF: CEQ_id rel_expression NEWLINE BLOCK END_id •

    $default  reduce using rule 21 (IF)


State 73

   22 ELSE: ELSE_id • NEWLINE BLOCK

    NEWLINE  shift, and go to state 77


State 74

   20 IF: CEQ_id rel_expression NEWLINE BLOCK ELSE • END_id

    END_id  shift, and go to state 78


State 75

   23 LOOP: WHL_id rel_expression NEWLINE BLOCK END_id •

    $default  reduce using rule 23 (LOOP)


State 76

   19 par_list: par_list COMMA IDENTIFIER •

    $default  reduce using rule 19 (par_list)


State 77

   22 ELSE: ELSE_id NEWLINE • BLOCK

    STA_id   shift, and go to state 1
    LOG_id   shift, and go to state 2
    FUNC_id  shift, and go to state 3
    JMP_id   shift, and go to state 4
    CEQ_id   shift, and go to state 5
    WHL_id   shift, and go to state 6
    NEWLINE  shift, and go to state 7

    BLOCK           go to state 79
    statement_list  go to state 10
    statement       go to state 11
    ASSIGNMENT      go to state 12
    PRINT           go to state 13
    FUNCTION_DEF    go to state 14
    FUNCTION_CALL   go to state 15
    IF              go to state 16
    LOOP            go to state 17


State 78

   20 IF: CEQ_id rel_expression NEWLINE BLOCK ELSE END_id •

    $default  reduce using rule 20 (IF)


State 79

   22 ELSE: ELSE_id NEWLINE BLOCK •

    $default  reduce using rule 22 (ELSE)
